--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   shared_preferences: ^2.0.9
   loading_animation_widget: ^1.2.0+1
   animated_text_kit: ^4.2.1
+  flutter_remix: ^0.0.3
+
 
 
   # The following adds the Cupertino Icons font to your application.
