--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   loading_animation_widget: ^1.2.0+1
   animated_text_kit: ^4.2.1
   flutter_remix: ^0.0.3
-
+  syncfusion_flutter_charts: ^20.1.57
 
 
   # The following adds the Cupertino Icons font to your application.
