nepse stock models created

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,12 @@ dependencies:
     sdk: flutter
   firebase_core: ^1.10.4
   firebase_auth: ^3.3.2
+  freezed_annotation: any
   firebase_storage: ^10.2.3
   flutter_localizations:
     sdk: flutter
   flutter_riverpod: ^1.0.0
   formz: ^0.4.1
-  freezed_annotation: ^0.15.0
   http: ^0.13.4
   json_annotation: ^4.3.0
   shared_preferences: ^2.0.9
