--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  auto_route: ^3.1.3
+  auto_route: ^4.0.1
   cloud_firestore: ^3.1.4
   dio: ^4.0.4
   flutter:
@@ -46,7 +46,7 @@ dependencies:
   loading_animation_widget: ^1.2.0+1
   animated_text_kit: ^4.2.1
   flutter_remix: ^0.0.3
-  syncfusion_flutter_charts: 20.1.57
+  syncfusion_flutter_charts: ^20.1.57
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -54,7 +54,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
-  auto_route_generator: ^3.1.0
+  auto_route_generator: ^4.0.0
 
   build_runner: ^2.1.5
   flutter_lints: ^1.0.0
