--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   animated_text_kit: ^4.2.1
   flutter_remix: ^0.0.3
   syncfusion_flutter_charts: ^20.1.57
+  cached_network_image: ^3.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
