--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_remix: ^0.0.3
   syncfusion_flutter_charts: ^20.1.57
   cached_network_image: ^3.2.1
+  url_launcher: ^6.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
