--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  lottie: ^1.3.0
 
 dev_dependencies:
   auto_route_generator: ^4.0.0
@@ -79,6 +80,7 @@ flutter:
   assets:
   - assets/lang/
   - assets/images/
+  - assets/lottie/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
