--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   syncfusion_flutter_charts: ^20.1.57
   cached_network_image: ^3.2.1
   url_launcher: ^6.1.2
+  statusbarz: ^1.0.11
 
 
   # The following adds the Cupertino Icons font to your application.
